<resources>
    <string name="app_name">TDAppAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="map">Vers la carte</string>
    <string name="bdd">Vers la liste</string>
    <string name="liste">Liste des trains</string>
    <string name="nothing">Rien à afficher !</string>
    <string name="bck">Retour</string>
    <string name="desc">Voici l\'application qui liste toutes les gares de France. Pour voir les gares, cliquez sur le bouton "Vers la liste".</string>
    <string name="desc2">Si vous souhaitez connaître votre position, cliquez sur le bouton "Vers la carte".</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="srch">Search Gare</string>
    <string name="sure">Êtes-vous sûr ?</string>
    <string name="oui">Oui</string>
    <string name="no">Non</string>
    <string name="appuyer">Vous devez cliquer sur une des cartes pour pouvoir être redirigé sur la carte ! \n Compris ?</string>
    <string name="appname">Station Finder</string>
    <string name="Langue">Langues</string>
    <string name="distance">Distance</string>
    <string name="change">Changer de station</string>
    <string name="select">Sélectionner une station</string>
    <string name="langue1">Vous avez cliquer sur : </string>
    <string name="sorry">Cette fonction n est pas encore implémentée... Désolé !</string>
    <string name="dlok">Téléchargement terminé !</string>
    <string name="dl">Téléchargement en cours !</string>
    <string name="idgare">Identifiant de la gare</string>
    <string name="log">Afficher les logs</string>
    <string name="debug">Debug</string>
    <string name="info">Info</string>
    <string name="warn">Warning</string>
    <string name="error">Error</string>
    <string name="all">Tous</string>
    <string name="filter_log">Choisissez un filtre</string>
    <string name="down">En bas</string>
    <string name="up">En haut</string>
    <string name="gps_network_not_enabled">GPS not enabled</string>
    <string name="open_location_settings">Ouvrir paramètres GPS</string>
    <string name="Cancel">Cancle</string>
    <string name="dist">Distance in km around you to find a train station</string>
    <string name="limite">Limite</string>
    <string name="lim">Number limit of train station to display in the list</string>
    <string name="subm">Soumettre</string>
    <string name="submit">Click to automaticcaly redirect on the list view</string>
    <string name="around">Autour de vous</string>
    <string name="Inlist">Dans la liste</string>
    <string name="depart">Souhaitez-vous afficher les prochains départs de la gare ?</string>
    <string name="ret">Retard : </string>
    <string name="timereel">Heure réelle de départ : </string>
    <string name="timetheo">Heure théorique de départ : </string>
    <string name="dep">Départ</string>
    <string name="dldone">[Trains] Téléchargement terminé !</string>
    <string name="missdone">[Mission] Téléchargement terminé !</string>
    <string name="refrechlist">Cliquez pour rafraichir la liste</string>
    <string name="bind">Voulez-vous afficher la position de cette gare sur la carte ?</string>

</resources>
