<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preference for train list">

    <PreferenceCategory
        android:title="@string/around">

        <ListPreference
            android:title="Distance"
            android:summary="@string/dist"
            android:key="dist"
            android:defaultValue="10"
            android:entries="@array/distance"
            android:entryValues="@array/distance_key" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Inlist">

        <ListPreference
            android:title="@string/limite"
            android:summary="@string/lim"
            android:key="lim"
            android:defaultValue="5"
            android:entries="@array/limit"
            android:entryValues="@array/limit_key" />

    </PreferenceCategory>


    <PreferenceCategory>

        <Preference
            android:key="submit"
            android:title="@string/subm"
            android:summary="@string/submit"></Preference>

    </PreferenceCategory>


</PreferenceScreen>